# loodation

./: .env.example  .pre-commit-config.yaml  README.md  compose.yaml  loodation.code-workspace  redis.conf
.devcontainer/: Dockerfile  devcontainer.json  install.sh
.github/: dependabot.yml
loodation-api/: LICENSE  README.md  alembic.ini  pyproject.toml  ruff.toml  ty.toml
loodation-api/alembic/: env.py
loodation-api/alembic/versions/: 2026_03_28_0213-33cd8c4cfaa6_.py
loodation-api/docker/: Dockerfile
loodation-api/src/loodation/: api.py  cache.py  config.py  database.py  main.py  models.py
loodation-api/src/loodation/auth/: models.py
loodation-miniapp/: README.md
